examples/test/testpolicy6756.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6756
  namespace: namespace435
spec:
  podSelector:
    matchLabels:
      key28: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value29
          key8: value11
      podSelector:
        matchLabels:
          key48: value41
          key47: value29
          key0: value40
